# LOBSimulator

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  main.cpp  prime_orderbook.db
API/: API.cpp  API.hpp  CMakeLists.txt
CXX/DummyInput/DBHandler/: DBHandler.hpp
CXX/Logic/API/: API.cpp
CXX/Logic/GAN/: RecreatingBestModelCPU.pt
CXX/Logic/OrderBook/: CMakeLists.txt
CXX/Logic/OrderBookTests/: SomeTests.cpp
CXX/UI/CandlestickWidget/: CMakeLists.txt
CXX/UI/CentralWidget/: CentralWidget.cpp
CXX/UI/HeaderWidget/: CMakeLists.txt  HeaderWidget.cpp  HeaderWidget.hpp
CloudDataRetriever/: CloudRetriever2.py  Multiprocessing.py  app.py
DBHandler/: CMakeLists.txt  DBHandler.cpp  DBHandler.hpp
DataRetreiver/: backend.py  orderbook.py
DataRetreiver/DataRetreiver2/: QTUI.py  backend.py  orderbook.py
GANs/: GAN_scratch.ipynb  GANscript.ipynb  GANscript1.py  data_reader.py  orderbook_snapshots2.csv  wGAN_GP.ipynb
GANs/Generator_States/: generator_state_dict.pth
GANs/runs/BaseWithBatchSize64/: events.out.tfevents.1707762771.uol-pc-055405.leeds.ac.uk.91574.0
GANs/runs/ChangeCToLognormalizationBatchSize200/: events.out.tfevents.1707786521.uol-pc-055407.leeds.ac.uk.5110.0
GANs/runs/n_critic1BatchSize64/: events.out.tfevents.1707852117.uol-pc-055402.leeds.ac.uk.172834.0
GANs/saved_models/cpp/: BatchSize64Base1000Epochs.pt
GANs/saved_models/python/: BasePaperLongRun17740.pth  BasePaperLongRun17740_backup1.pth  BasePaperLongRun17740_backup2.pth  BatchSize64Base1000Epochs.pth  Cis6AndCriticHavingGeneratorArchitectureEpoch.pth  Cis6AndDoublingArchitectureHorizontal.pth  Cis6AndDoublingArchitectureHorizontalTanhActivationAll.pth  Cis6AndDoublingArchitectureHorizontalTanhActivationH31.pth  Cis6AndDoublingArchitectureHorizontalWithTanh.pth  Cis6SequentialArchitectureTanhActivationAll.pth  Cis6SequentialArchitectureTanhActivationAllReRun.pth  HorizontalExpansion.pth  HorizontalExpansionBoth.pth  NCritic10BatchSize500Diverged.pth  checkpoint20FebShreyas.pth  checkpoint20FebShreyas_backup.pth
OrderBook/: CMakeLists.txt  OrderBook.cpp  OrderBook.hpp
OrderBookTests/: CMakeLists.txt  SomeTests.cpp
OrderBookTests/tests/: CMakeLists.txt
OrderBookWidget/: CMakeLists.txt  OrderBookWidget.cpp  OrderBookWidget.hpp
OrderbookDistribution/: distribution_visual.py
Scoping Doc Template/: sample-acmtog.aux  sample-acmtog.bbl  sample-acmtog.blg  sample-acmtog.fdb_latexmk  sample-acmtog.fls  sample-acmtog.out  sample-acmtog.tex
Scoping Document/: sample-base.bib  scoping-document.tex
cpp codebase/: CMakeLists.txt  RecreatingBestModelExtraLayerGenCuda.pt  Test1.pt  main.cpp
cpp codebase/DataRetreiver/: backend.py
cpp codebase/DummyInput/DBHandler/: CMakeLists.txt
cpp codebase/DummyInput/DataRetreiver/: backend.py
cpp codebase/DummyInput/DataRetreiver/DataRetreiver2/: QTUI.py
cpp codebase/Logic/ABM/: ABM.cpp  ABM.hpp  CMakeLists.txt
cpp codebase/Logic/API/: API.cpp  API.hpp  CMakeLists.txt
cpp codebase/Logic/GAN/: CMakeLists.txt  GAN.cpp  GAN.hpp
cpp codebase/Logic/OrderBook/: OrderBook.cpp  OrderBook.hpp
cpp codebase/OrderBook/: OrderBook.cpp
cpp codebase/OrderBookWidget/: OrderBookWidget.cpp
cpp codebase/UI/CandlestickWidget/: CandlestickWidget.cpp  CandlestickWidget.hpp
cpp codebase/UI/CentralWidget/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.hpp
cpp codebase/UI/HeaderWidget/: CMakeLists.txt  HeaderWidget.cpp  HeaderWidget.hpp
cpp codebase/UI/OrderBookWidget/: CMakeLists.txt  OrderBookWidget.cpp  OrderBookWidget.hpp
cpp codebase/buildXcode/: CMakeCache.txt  cmake_install.cmake
cpp codebase/buildXcode/CMakeScripts/: ReRunCMake.make
cpp codebase/buildXcode/DBHandler/: cmake_install.cmake
cpp codebase/buildXcode/DBHandler/CMakeScripts/: ReRunCMake.make
cpp codebase/buildXcode/DBHandler/DBHandler.xcodeproj/: project.pbxproj
cpp codebase/buildXcode/DBHandler/DBHandler_autogen/: mocs_compilation.cpp
cpp codebase/buildXcode/DBHandler/DBHandler_autogen/include_Debug/EWIEGA46WW/: moc_DBHandler.cpp  moc_DBHandler.cpp.d
cpp codebase/buildXcode/Debug/: OrderBookDemo
cpp codebase/buildXcode/OrderBook/: cmake_install.cmake
cpp codebase/buildXcode/OrderBook/CMakeScripts/: ReRunCMake.make
cpp codebase/buildXcode/OrderBook/OrderBook.xcodeproj/: project.pbxproj
cpp codebase/buildXcode/OrderBookDemo.xcodeproj/: project.pbxproj
cpp codebase/buildXcode/OrderBookTests/: RunTests[1]_include-Debug.cmake  RunTests[1]_include-MinSizeRel.cmake  RunTests[1]_include-RelWithDebInfo.cmake  RunTests[1]_include-Release.cmake  RunTests[1]_include.cmake  cmake_install.cmake
cpp codebase/buildXcode/OrderBookTests/CMakeScripts/: ReRunCMake.make
cpp codebase/buildXcode/OrderBookTests/Debug/: RunTests
cpp codebase/buildXcode/OrderBookTests/OrderBookTests.xcodeproj/: project.pbxproj
cpp codebase/buildXcode/OrderBookWidget/: cmake_install.cmake
cpp codebase/buildXcode/OrderBookWidget/CMakeScripts/: ReRunCMake.make
cpp codebase/buildXcode/OrderBookWidget/OrderBookWidget.xcodeproj/: project.pbxproj
cpp codebase/buildXcode/OrderBookWidget/OrderBookWidget_autogen/: moc_predefs_Debug.h  mocs_compilation.cpp
cpp codebase/buildXcode/OrderBookWidget/OrderBookWidget_autogen/include_Debug/EWIEGA46WW/: moc_OrderBookWidget.cpp  moc_OrderBookWidget.cpp.d
cpp codebase/resources/: Newsdata_Records.csv
cxx/: CMakeLists.txt  main.cpp
cxx/DummyInput/DBHandler/: DBHandler.cpp
cxx/DummyInput/DataRetreiver/DataRetreiver2/: backend.py
cxx/Logic/ABM/: ABM.cpp  ABM.hpp  CMakeLists.txt  abm_lob.csv
cxx/Logic/API/: API.cpp  API.hpp  CMakeLists.txt
cxx/Logic/GAN/: CMakeLists.txt  GAN.cpp  GAN.hpp
cxx/Logic/OrderBook/: OrderBook.cpp  OrderBook.hpp
cxx/Logic/OrderBookTests/: CMakeLists.txt  SomeTests.cpp
cxx/UI/CandlestickWidget/: CMakeLists.txt  CandlestickWidget.cpp  CandlestickWidget.hpp
cxx/UI/CentralWidget/: CentralWidget.cpp  CentralWidget.hpp
cxx/UI/HeaderWidget/: HeaderWidget.cpp  HeaderWidget.hpp
cxx/UI/OrderBookWidget/: CMakeLists.txt  OrderBookWidget.cpp  OrderBookWidget.hpp
